--- a/schedule.html
+++ b/schedule.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="schedule">
                     <div class="teams">
-                        <img src="images/Flag-2.png" alt="">VS
+                        <img src="images/flag-2.png" alt="">VS
                         <img src="images/flag-5.png" alt="">
                     </div>
                     <h3>Germany VS Brazil </h3>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="schedule">
                     <div class="teams">
-                        <img src="images/Flag-3.png" alt="">VS
+                        <img src="images/flag-3.png" alt="">VS
                         <img src="images/flag-5.png" alt="">
                     </div>
                     <h3>Japan VS Brazil </h3>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="schedule">
                     <div class="teams">
-                        <img src="images/Flag-4.png" alt="">VS
+                        <img src="images/flag-4.png" alt="">VS
                         <img src="images/flag-2.png" alt="">
                     </div>
                     <h3>Germany VS America </h3>
