--- a/schedule.html
+++ b/schedule.html
@@ -34,72 +34,76 @@
 <!-- header end -->
 
 <!-- schedule start -->
-    <main>
+   <main>
         <section class="main">
-
-        <!-- Menu Start -->    
-            <div class="menu">
-                <nav>
-                    <ul>
-                        <li class="active"><a href="index.html">Blog</a></li>
-                        <li><a href="#">All Group</a></li>
-                        <li><a href="#">Schedule</a></li>
-                    </ul>
-                </nav>
+            <div class="article">
+            
+            <!-- Menu Start -->
+                <div class="menu">
+                    <nav>
+                        <ul>
+                            <li class="active"><a href="#">Blog</a></li>
+                            <li><a href="#">All Group</a></li>
+                            <li><a href="schedule.html">Schedule</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            <!-- Menu End -->  
+    
+                <div class="schedules">
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/Flag-1.png" alt="">VS
+                            <img src="images/flag-2.png" alt="">
+                        </div>
+                        <h3>Germany VS France </h3>
+                        <p>Nov 01, 2022, 1.00 AM</p>
+                    </div>
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/flag-2.png" alt="">VS
+                            <img src="images/flag-5.png" alt="">
+                        </div>
+                        <h3>Germany VS Brazil </h3>
+                        <p>Nov 02, 2022, 2.00 AM</p>
+                    </div>
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/flag-3.png" alt="">VS
+                            <img src="images/flag-5.png" alt="">
+                        </div>
+                        <h3>Japan VS Brazil </h3>
+                        <p>Nov 03, 2022, 3.00 AM</p>
+                    </div>
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/Flag-1.png" alt="">VS
+                            <img src="images/flag-5.png" alt="">
+                        </div>
+                        <h3>France VS Brazil </h3>
+                        <p>Nov 04, 2022, 4.00 AM</p>
+                    </div>
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/Flag-1.png" alt="">VS
+                            <img src="images/flag-3.png" alt="">
+                        </div>
+                        <h3>Germany VS Japan </h3>
+                        <p>Nov 05, 2022, 5.00 AM</p>
+                    </div>
+                    <div class="schedule">
+                        <div class="teams">
+                            <img src="images/flag-4.png" alt="">VS
+                            <img src="images/flag-2.png" alt="">
+                        </div>
+                        <h3>Germany VS America </h3>
+                        <p>Nov 06, 2022, 6.00 AM</p>
+                    </div>
+                </div>
             </div>
-        <!-- Menu End -->   
-
-            <div class="schedules">
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/Flag-1.png" alt="">VS
-                        <img src="images/flag-2.png" alt="">
-                    </div>
-                    <h3>Germany VS France </h3>
-                    <p>Nov 01, 2022, 1.00 AM</p>
+                <div class="expand">
+                    <a href="#" class="button">View More</a>
                 </div>
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/flag-2.png" alt="">VS
-                        <img src="images/flag-5.png" alt="">
-                    </div>
-                    <h3>Germany VS Brazil </h3>
-                    <p>Nov 02, 2022, 2.00 AM</p>
-                </div>
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/flag-3.png" alt="">VS
-                        <img src="images/flag-5.png" alt="">
-                    </div>
-                    <h3>Japan VS Brazil </h3>
-                    <p>Nov 03, 2022, 3.00 AM</p>
-                </div>
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/Flag-1.png" alt="">VS
-                        <img src="images/flag-5.png" alt="">
-                    </div>
-                    <h3>France VS Brazil </h3>
-                    <p>Nov 04, 2022, 4.00 AM</p>
-                </div>
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/Flag-1.png" alt="">VS
-                        <img src="images/flag-3.png" alt="">
-                    </div>
-                    <h3>Germany VS Japan </h3>
-                    <p>Nov 05, 2022, 5.00 AM</p>
-                </div>
-                <div class="schedule">
-                    <div class="teams">
-                        <img src="images/flag-4.png" alt="">VS
-                        <img src="images/flag-2.png" alt="">
-                    </div>
-                    <h3>Germany VS America </h3>
-                    <p>Nov 06, 2022, 6.00 AM</p>
-                </div>
-            </div>
-
         </section>
     </main>
 <!-- schedule end -->
