--- a/schedule.html
+++ b/schedule.html
@@ -42,9 +42,9 @@
                 <div class="menu">
                     <nav>
                         <ul>
-                            <li class="active"><a href="#">Blog</a></li>
+                            <li class="active"><a href="index.html">Blog</a></li>
                             <li><a href="#">All Group</a></li>
-                            <li><a href="schedule.html">Schedule</a></li>
+                            <li><a href="#">Schedule</a></li>
                         </ul>
                     </nav>
                 </div>
